--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root { --radius: 16px; }
-html, body { height: 100%; }
+html, body { height: 100%; font-family: "Bricolage Grotesque", sans-serif; }
 
 html.lenis, html.lenis body { height: auto; }
 .lenis.lenis-smooth { scroll-behavior: auto !important; }
